--- a/scilab/modules/functions/Makefile.am
+++ b/scilab/modules/functions/Makefile.am
@@ -71,7 +71,7 @@ libscifunctions_la_sci_gatewaydir = $(mydatadir)/sci_gateway
 libscifunctions_la_sci_gateway_DATA = sci_gateway/functions_gateway.xml
 
 #### functions : include files ####
-libscifunctions_la_includedir=$(pkgincludedir)/functions
+libscifunctions_la_includedir=$(pkgincludedir)
 libscifunctions_la_include_HEADERS = includes/gw_functions.h \
 	includes/librarieslist.h \
 	includes/libraryinfo.h \
