--- a/scilab/modules/matio/Makefile.am
+++ b/scilab/modules/matio/Makefile.am
@@ -75,6 +75,6 @@ libscimatio_la_sci_gatewaydir = $(mydatadir)/sci_gateway
 libscimatio_la_sci_gateway_DATA = sci_gateway/matio_gateway.xml
 
 #### matio : include files ####
-libscimatio_la_includedir=$(pkgincludedir)/matio
+libscimatio_la_includedir=$(pkgincludedir)
 libscimatio_la_include_HEADERS = includes/gw_matio.h \
 	includes/dynlib_matio.h
