--- a/scilab/modules/sparse/Makefile.am
+++ b/scilab/modules/sparse/Makefile.am
@@ -194,7 +194,7 @@ libscisparse_la_sci_gatewaydir = $(mydatadir)/sci_gateway
 libscisparse_la_sci_gateway_DATA = sci_gateway/sparse_gateway.xml
 
 #### sparse : include files ####
-libscisparse_la_includedir=$(pkgincludedir)/sparse
+libscisparse_la_includedir=$(pkgincludedir)
 libscisparse_la_include_HEADERS = includes/gw_sparse.h \
 includes/spmalloc.h \
 includes/sp.h \
