--- a/scilab/modules/umfpack/Makefile.am
+++ b/scilab/modules/umfpack/Makefile.am
@@ -74,7 +74,7 @@ libsciumfpack_la_CFLAGS= -I$(srcdir)/includes/ \
 			-I$(top_srcdir)/modules/mexlib/includes
 
 #### umfpack : include files ####
-libsciumfpack_la_includedir=$(pkgincludedir)/umfpack
+libsciumfpack_la_includedir=$(pkgincludedir)
 libsciumfpack_la_include_HEADERS = includes/gw_umfpack.h \
 includes/with_umfpack.h \
 includes/dynlib_umfpack.h
