--- a/scilab/modules/fftw/Makefile.am
+++ b/scilab/modules/fftw/Makefile.am
@@ -62,7 +62,7 @@ libscifftw_la_CFLAGS=  	-I$(srcdir)/includes/ \
 			$(FFTW3_CFLAGS)
 
 #### fftw : include files ####
-libscifftw_la_includedir=$(pkgincludedir)/fftw
+libscifftw_la_includedir=$(pkgincludedir)
 libscifftw_la_include_HEADERS = includes/gw_fftw.h \
 includes/dynlib_fftw.h \
 includes/with_fftw.h
