--- a/scilab/modules/graphic_export/Makefile.am
+++ b/scilab/modules/graphic_export/Makefile.am
@@ -112,7 +112,7 @@ libscigraphic_export_la_sci_gatewaydir = $(mydatadir)/sci_gateway
 libscigraphic_export_la_sci_gateway_DATA = sci_gateway/graphic_export_gateway.xml
 
 #### graphic_export : include files ####
-libscigraphic_export_la_includedir=$(pkgincludedir)/graphic_export
+libscigraphic_export_la_includedir=$(pkgincludedir)
 libscigraphic_export_la_include_HEADERS = includes/gw_graphic_export.h \
 includes/dynlib_graphic_export.h
 
