--- a/scilab/modules/string/Makefile.am
+++ b/scilab/modules/string/Makefile.am
@@ -105,7 +105,7 @@ libscistring_la_sci_gatewaydir = $(mydatadir)/sci_gateway
 libscistring_la_sci_gateway_DATA = sci_gateway/string_gateway.xml
 
 #### string : include files ####
-libscistring_la_includedir=$(pkgincludedir)/string
+libscistring_la_includedir=$(pkgincludedir)
 libscistring_la_include_HEADERS = includes/men_Sutils.h \
 includes/gw_string.h includes/InitializeString.h \
 includes/cvstr.h includes/getfastcode.h \
