--- a/scilab/modules/symbolic/Makefile.am
+++ b/scilab/modules/symbolic/Makefile.am
@@ -56,7 +56,7 @@ libscisymbolic_la_sci_gateway_DATA = sci_gateway/symbolic_gateway.xml
 
 
 #### symbolic : include files ####
-libscisymbolic_la_includedir=$(pkgincludedir)/symbolic
+libscisymbolic_la_includedir=$(pkgincludedir)
 libscisymbolic_la_include_HEADERS = includes/gw_symbolic.h \
 includes/dynlib_symbolic.h
 
