--- a/scilab/modules/tclsci/Makefile.am
+++ b/scilab/modules/tclsci/Makefile.am
@@ -248,7 +248,7 @@ libscitclsci_la_sci_gatewaydir = $(mydatadir)/sci_gateway
 libscitclsci_la_sci_gateway_DATA = sci_gateway/tclsci_gateway.xml
 
 #### tclsci : include files ####
-libscitclsci_la_includedir=$(pkgincludedir)/tclsci
+libscitclsci_la_includedir=$(pkgincludedir)
 libscitclsci_la_include_HEADERS = includes/setenvtcl.h \
 includes/GedManagement.h \
 includes/TCL_Global.h \
