fix a small mistake in my previous commit

--- a/scilab/configure.ac
+++ b/scilab/configure.ac
@@ -630,7 +630,7 @@ if test "$with_javasci" != no -o "$with_gui" != no -o "$enable_build_help" != no
 
 				# Named differently under ArchLinux
 				if test -z "$LOOKS"; then
-					AC_JAVA_CHECK_PACKAGE([jgoodies-looks],[com.jgoodies.looks.common.RenderingUtils],[Scilab Gui - Look and feel],"yes")
+					AC_JAVA_CHECK_PACKAGE([jgoodies-looks],[com.jgoodies.looks.common.RenderingUtils],[Scilab Gui - Look and feel])
 					LOOKS=$PACKAGE_JAR_FILE
 				fi
 				AC_SUBST(LOOKS)
