fix configure under archlinux, remove useless test under opensuse (merge from 5.1)

--- a/scilab/configure.ac
+++ b/scilab/configure.ac
@@ -658,13 +658,11 @@ if test "$with_javasci" != no -o "$with_gui" != no -o "$enable_build_help" != no
 				AC_JAVA_CHECK_PACKAGE([looks],[com.jgoodies.looks.common.RenderingUtils],[Scilab Gui - Look and feel],"yes")
 				LOOKS=$PACKAGE_JAR_FILE
 
-				# Named differently under Opensuse
+				# Named differently under ArchLinux
 				if test -z "$LOOKS"; then
-				    AC_JAVA_CHECK_PACKAGE([looks2],[com.jgoodies.looks.common.RenderingUtils],[Scilab Gui - Look and feel])
+					AC_JAVA_CHECK_PACKAGE([jgoodies-looks],[com.jgoodies.looks.common.RenderingUtils],[Scilab Gui - Look and feel])
 					LOOKS=$PACKAGE_JAR_FILE
 				fi
-				AC_SUBST(LOOKS)
-
 				AC_SUBST(LOOKS)
 
 				#  Skin Look and Feel 
