--- a/scilab/Makefile.incl.am
+++ b/scilab/Makefile.incl.am
@@ -68,7 +68,7 @@ if SWIG
 swig: $(SWIG_WRAPPERS)
 	@SWIG_PACKAGENAME=org.scilab.modules.$(modulename); \
 	SWIG_OUTDIR=src/java/org/scilab/modules/$(modulename)/; \
-	if test ! -z "$(SWIG_WRAPPERS)"; then \
+	if test -n "$(SWIG_WRAPPERS)"; then \
 		for file in $(SWIG_WRAPPERS) ; do \
 			echo "Swig process of $$file ..."; \
 			$(SWIG_BIN) $(SWIG_JAVA) -package $$SWIG_PACKAGENAME  -outdir $$SWIG_OUTDIR $$file; \
@@ -85,7 +85,7 @@ if GIWS
 ## build Swig Java => C wrappers
 giws: $(GIWS_WRAPPERS)
 	@GIWS_OUTPUTDIR=src/jni/;\
-	if test ! -z "$(GIWS_WRAPPERS)"; then \
+	if test -n "$(GIWS_WRAPPERS)"; then \
 		for file in $(GIWS_WRAPPERS) ; do \
 			echo "GIWS process of $$file ..."; \
 			$(GIWS_BIN) --output-dir $$GIWS_OUTPUTDIR --throws-exception-on-error --description-file $$file; \
