convert Int class to templated Int class

--- a/scilab/modules/types/types.vcproj
+++ b/scilab/modules/types/types.vcproj
@@ -383,6 +383,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\includes\intt.hxx"
+				>
+			</File>
+			<File
 				RelativePath=".\includes\macro.hxx"
 				>
 			</File>
